Rewrite English posts for natural, native-sounding language

--- a/content/posts/2025-01-15-welcome.en.md
+++ b/content/posts/2025-01-15-welcome.en.md
@@ -1,5 +1,5 @@
 ---
-title: "Starting Learning in Public"
+title: "Why I'm Learning in Public"
 date: 2025-01-15T12:00:00+09:00
 draft: false
 categories:
@@ -8,17 +8,17 @@ tags:
   - announcement
 ---
 
-## About This Blog
+## What This Blog Is About
 
-This is a blog where I share my daily learning journey, following the "Learning in Public" concept.
+I'm embracing the "Learning in Public" philosophy—documenting my learning journey as I go, mistakes and all.
 
-Main topics:
-- Music (piano, singing, songwriting, gospel, music production)
+Here's what I'll be writing about:
+- Music (piano, vocals, songwriting, gospel, production)
 - Knowledge Management
-- Vibe Coding / Collaboration with Agentic AI
-- Home Management (improving how I do housework, cooking, etc.)
-- Other learnings
+- Vibe Coding / Working with AI agents
+- Life optimization (cooking, household systems, etc.)
+- Whatever else I'm figuring out
 
-I'll be organizing and refining my learning notes recorded in Obsidian with the help of AI, then publishing them here.
+My workflow: I take notes in Obsidian, polish them up with AI assistance, and publish them here.
 
-Looking forward to sharing this journey with you!
+Thanks for following along!
